--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="result" id="result"></div>
     
     <script>
-        let options = ["延畢1年", "延畢2年", "888", "168", "1688", "978", "活該沒中", "碩班快樂"];
+        let options = ["再延1年", "妳好意思?", "888", "168", "666", "978", "活該沒中", "碩班快樂"];
         options = options.sort(() => Math.random() - 0.5); // 隨機打亂獎項順序
         let drawn = false;
 
